--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,12 @@ dependencies = [
     "fastapi>=0.115",
     "uvicorn[standard]>=0.27",
     "pydantic>=2.10",
+    "itsdangerous>=2.2",
 ]
 
 [project.optional-dependencies]
 dev = ["pytest", "ruff", "mypy"]
+
+[tool.setuptools]
+packages = ["routers", "controllers"]
+py-modules = ["main"]
