--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "uvicorn[standard]>=0.27",
     "pydantic>=2.10",
     "itsdangerous>=2.2",
+    "python-dotenv>=1.2.1"
 ]
 
 [project.optional-dependencies]
