--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "uvicorn>=0.40.0",
     "watchfiles>=1.1.1",
     "websockets>=15.0.1",
+    "cryptography>=46.0.5",
 ]
 
 [project.optional-dependencies]
