fix: 프론트엔드는 EC2를 사용하도록 변경

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 SECRET_KEY="your-secret-key-here"
-HTTPS_ONLY=False
+# HTTPS_ONLY: Controls whether cookies are sent only over HTTPS
+# - False: Cookies work over HTTP (local dev, testing)
+# - True: Cookies only over HTTPS (production with SSL)
+# For nginx reverse proxy deployment (single-origin), can be False for HTTP or True for HTTPS
+HTTPS_ONLY=false
 
 # MySQL Database Settings
 DB_HOST="127.0.0.1"
@@ -7,3 +11,9 @@ DB_PORT=3306
 DB_USER="user_name_here"
 DB_PASSWORD="secure_password_here"
 DB_NAME="community_service"
+
+# AWS S3 Settings (Required for image uploads)
+AWS_ACCESS_KEY_ID="your-aws-access-key-id"
+AWS_SECRET_ACCESS_KEY="your-aws-secret-access-key"
+AWS_REGION="ap-southeast-2"
+AWS_S3_BUCKET_NAME="your-bucket-name"
