fix: 정적 검사 과정에서 발견된 오류 수정

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -44,7 +44,7 @@ jobs:
       run: ruff check .
 
     - name: Run type checking (mypy)
-      run: mypy . --ignore-missing-imports
+      run: mypy .
 
     - name: Wait for MySQL
       run: |
