--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "watchfiles>=1.1.1",
     "websockets>=15.0.1",
     "cryptography>=46.0.5",
+    "mangum>=0.21.0",
 ]
 
 [project.optional-dependencies]
