fix: /assets 디렉토리 추가

--- a/.gitignore
+++ b/.gitignore
@@ -118,8 +118,11 @@ server_error.log
 # Project Specific
 # ===========================
 
-# Uploaded assets (user-generated content)
-assets/
+# Uploaded assets (user-generated content, not static defaults)
+assets/*
+!assets/profiles/
+assets/profiles/*
+!assets/profiles/default_profile.jpg
 
 # Local scripts
 scripts/
