feat: 계정 찾기 기능 추가

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,12 @@ DB_PORT=3306
 DB_USER="user_name_here"
 DB_PASSWORD="secure_password_here"
 DB_NAME="community_service"
+
+# 이메일 발송 설정
+EMAIL_BACKEND=smtp                    # ses (프로덕션) | smtp (로컬)
+EMAIL_FROM=noreply@my-community.shop
+SMTP_HOST=localhost
+SMTP_PORT=1025                        # MailHog 로컬 개발용 (docker run -p 1025:1025 -p 8025:8025 mailhog/mailhog)
+SMTP_USER=
+SMTP_PASSWORD=
+SES_REGION=ap-northeast-2
