--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = ["pytest", "pytest-asyncio", "pytest-cov", "httpx", "ruff", "mypy"]
+load-test = ["locust>=2.28.0"]
 
 [tool.setuptools]
 packages = ["routers", "controllers", "schemas", "models", "dependencies", "middleware", "utils"]
